[gd_scene load_steps=14 format=3 uid="uid://d0luy3a8cnrwc"]

[ext_resource type="Script" path="res://Scenes/Enemy/Octopus/octopus.gd" id="1_6t21d"]
[ext_resource type="Texture2D" uid="uid://dhcp3dt71ptk3" path="res://Assets/sprite-sheet/octopus-sprite-Sheet.png" id="1_nngro"]

[sub_resource type="AtlasTexture" id="AtlasTexture_idju5"]
atlas = ExtResource("1_nngro")
region = Rect2(0, 0, 74, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eisc"]
atlas = ExtResource("1_nngro")
region = Rect2(74, 0, 74, 72)

[sub_resource type="SpriteFrames" id="SpriteFrames_61voj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_idju5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eisc")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_opnj8"]
size = Vector2(72, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oyw1t"]
size = Vector2(15, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q44r4"]
size = Vector2(12, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6gohd"]
size = Vector2(12, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ap0ly"]
size = Vector2(12, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pwsf0"]
size = Vector2(12, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ppcgp"]
size = Vector2(15, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_272pj"]
size = Vector2(18, 6)

[node name="Octopus" type="Area2D"]
script = ExtResource("1_6t21d")
_points = 10

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_61voj")
autoplay = "default"
frame = 1

[node name="Torso" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_opnj8")

[node name="LeftThigh" type="CollisionShape2D" parent="."]
position = Vector2(-16.5, 9)
shape = SubResource("RectangleShape2D_oyw1t")

[node name="LeftLeg" type="CollisionShape2D" parent="."]
position = Vector2(-24, 15)
shape = SubResource("RectangleShape2D_q44r4")

[node name="LeftFoot" type="CollisionShape2D" parent="."]
position = Vector2(-18, 21)
shape = SubResource("RectangleShape2D_6gohd")

[node name="RightFoot" type="CollisionShape2D" parent="."]
position = Vector2(18, 21)
shape = SubResource("RectangleShape2D_ap0ly")

[node name="RightLeg" type="CollisionShape2D" parent="."]
position = Vector2(24, 15)
shape = SubResource("RectangleShape2D_pwsf0")

[node name="RightThigh" type="CollisionShape2D" parent="."]
position = Vector2(16.5, 9)
shape = SubResource("RectangleShape2D_ppcgp")

[node name="ThighGap" type="CollisionShape2D" parent="."]
position = Vector2(0, 15)
shape = SubResource("RectangleShape2D_272pj")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
